Update API vs 'organization', add logs, fix 'issue' link broken > 10000 issues

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,4 @@ securitystandards/package-lock.json
 securitystandards/data.json
 sonarcloud/package-lock.json
 sonarcloud/data.json
-
+package-lock.json
