--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ securitystandards/package-lock.json
 securitystandards/data.json
 sonarcloud/package-lock.json
 sonarcloud/data.json
+checkrules/package-lock.json
+checkrules/node_modules/
