--- a/checkrules/package.json
+++ b/checkrules/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "securitystandards",
+    "name": "checkrules",
     "version": "0.0.1",
     "description": "",
     "license": "MIT",
